test/types/type_variables/ferguson/type-alias-generic-field.good
type-alias-generic-field.chpl:6: error: cannot use a generic type as the default for a type field, 'badField'
