test/types/type_variables/ferguson/type-alias-generic-field.chpl
record RG {
  type t;
}

record R {
  type badField = RG;
  type goodField = RG(?);
}

var x: R();
